<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/yellow_light_max"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EnterOTPFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView4"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:elevation="@dimen/_5sdp"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnBack2"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:src="@drawable/icons8_left_30px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="Nhập mã OTP"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:gravity="center"
        android:text="@string/we_sent_otp_to_your_mail"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <LinearLayout
        android:id="@+id/card_email"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:backgroundTint="#00000000"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_7sdp"
            app:strokeColor="@color/red_pink_2"
            app:strokeWidth="@dimen/_2sdp">

            <EditText
                android:id="@+id/edtNum1"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00000000" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_7sdp"
            app:strokeColor="@color/red_pink_2"
            app:strokeWidth="@dimen/_2sdp">

            <EditText
                android:id="@+id/edtNum2"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00000000" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_7sdp"
            app:strokeColor="@color/red_pink_2"
            app:strokeWidth="@dimen/_2sdp">

            <EditText
                android:id="@+id/edtNum3"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00000000" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_7sdp"
            app:strokeColor="@color/red_pink_2"
            app:strokeWidth="@dimen/_2sdp">

            <EditText
                android:id="@+id/edtNum4"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00000000" />

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:backgroundTint="@color/red_pink_2"
        android:padding="@dimen/_8sdp"
        android:text="@string/verify"
        android:textSize="@dimen/_13sdp"
        app:cornerRadius="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_email" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNext">

        <TextView
            android:text="@string/do_not_you_receive_code"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/resend"
            android:textStyle="bold"
            android:textColor="@color/red_pink_1"
            android:textSize="@dimen/_14sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>